...
            "state" : "translated",
            "value" : "О Notra"
          }
        }
      }
    },
    "Add Tag" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tag hinzufügen"
...
            "state" : "translated",
            "value" : "Вложение %@"
          }
        }
      }
    },
    "Attachments" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Anhänge"
...
            "state" : "translated",
            "value" : "Даты"
          }
        }
      }
    },
    "Delete" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Löschen"
...
            "state" : "translated",
            "value" : "Удалить вложение?"
          }
        }
      }
    },
    "Delete Note?" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Notiz löschen?"
...
            "state" : "translated",
            "value" : "Удалить заметку?"
          }
        }
      }
    },
    "Done" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fertig"
...
            "state" : "translated",
            "value" : "Готово"
          }
        }
      }
    },
    "Edit" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bearbeiten"
...
            "state" : "translated",
            "value" : "Изменена"
          }
        }
      }
    },
    "New Note" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Neue Notiz"
...
